fix breaking change in ms viper result UI